--- a/package.json
+++ b/package.json
@@ -20,16 +20,16 @@
     "@babel/preset-env": "^7.0.0",
     "@babel/register": "^7.0.0",
     "@openzeppelin/contracts": "^4.4.2",
-    "bootstrap": "4.3.1",
-    "chai": "4.2.0",
-    "chai-as-promised": "7.1.1",
-    "chai-bignumber": "3.0.0",
-    "react": "16.8.4",
-    "react-bootstrap": "1.0.0-beta.5",
-    "react-dom": "16.8.4",
-    "react-scripts": "2.1.3",
-    "truffle": "5.1.39",
-    "web3": "1.2.11"
+    "bootstrap": "^5.1.3",
+    "chai": "^4.3.6",
+    "chai-as-promised": "^7.1.1",
+    "chai-bignumber": "^3.0.0",
+    "react": "^17.0.2",
+    "react-bootstrap": "^2.1.2",
+    "react-dom": "^17.0.2",
+    "react-scripts": "^4.0.3",
+    "truffle": "^5.4.32",
+    "web3": "^1.7.0"
   },
   "scripts": {
     "start": "react-scripts start",
