--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dom": "^17.0.2",
     "react-scripts": "^4.0.3",
     "truffle": "^5.4.32",
+    "truffle-flatten": "^1.0.8",
     "web3": "^1.7.0"
   },
   "scripts": {
